core/networking/envoy-gateway/proxy/backend-traffic-policy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compression:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  connection:
    bufferLimit: 8Mi
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
